--- a/exemplobootstrap01/index.html
+++ b/exemplobootstrap01/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale">
@@ -11,9 +11,15 @@
 
  <!--Incorporação do Bootstrap-->
  <link href="bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
  <body>
-<h1>Alô mengão</h1>
-<p>MENGO melhor de todos!!!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-6 bg-primary p-5">Coluna 01</div>
+        <div class="col-6 bg-danger p-5">Coluna 02</div>
+    </div>
+</div>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
  </body>
 </html>
