--- a/exemplobootstrap01/index.html
+++ b/exemplobootstrap01/index.html
@@ -20,6 +20,34 @@
         <div class="col-6 bg-danger p-5">Coluna 02</div>
     </div>
 </div>
+
+<div class="container">
+    <div class="row g-2 mt-2">
+    <div class="col-6">
+        <div class="bg-primary">1</div>
+    </div>
+
+    <div class="col-6">
+        <div class="bg-danger">2</div>
+    </div>
+
+    <div class="col-6">
+        <div class="bg-warning">3</div>
+    </div>
+
+    <div class="col-6">
+        <div class="bg-secondary">4</div>
+    </div>
+
+    <div class="col-6">
+        <div class="bg-success">5</div>
+    </div>
+
+    <div class="col-6">
+        <div class="bg-info">6</div>
+        </div>
+    </div>
+</div>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
  </body>
 </html>
