--- a/exemplobootstrap01/templete05.html
+++ b/exemplobootstrap01/templete05.html
@@ -12,9 +12,17 @@
  <div class="col-12">
  <div class="card col-4">
 <img src="cristianeflamengo.png" class="card-img-top">
+<div class="card-body">
+  <h5 class="card-title">Cristiane Matadora</h5>
+  <p class="card-text">
+    Cristiane foi uma das maiores jogadoras
+    de futebol feminino da história.
+  </p>
+  <a href="#" class="btn btn-primary">
+    Saiba mais </a>
+</div>
  </div>
 </div>
-
  </head>
  <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </body>
