--- a/exemplobootstrap01/templete05.html
+++ b/exemplobootstrap01/templete05.html
@@ -18,7 +18,8 @@
     Cristiane foi uma das maiores jogadoras
     de futebol feminino da história.
   </p>
-  <a href="#" class="btn btn-primary">
+  <a href="https://www.ogol.com.br/jogador/cristiane/106352" 
+  target="_blank" class="btn btn-primary"></a>
     Saiba mais </a>
 </div>
  </div>
