--- a/exemplobootstrap01/templete05.html
+++ b/exemplobootstrap01/templete05.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang ="pt-br">
-    <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap - Template 05</title>
-   <!--Incorporação do Bootstrap | CSS-->
- <link href="bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet"
-  rel="stylesheet">
- <body>
- <div class="col-12">
- <div class="card col-4">
-<img src="cristianeflamengo.png" class="card-img-top">
-<div class="card-body">
-  <h5 class="card-title">Cristiane Matadora</h5>
-  <p class="card-text">
-    Cristiane foi uma das maiores jogadoras
-    de futebol feminino da história.
-  </p>
-  <a href="https://www.ogol.com.br/jogador/cristiane/106352" 
-  target="_blank" class="btn btn-primary"></a>
-    Saiba mais </a>
-</div>
- </div>
-</div>
- </head>
- <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+<html lang="pt-br">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE-edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap - Template 05</title>
+  <!--Incorporação do Bootstrap | CSS-->
+  <link href="bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" rel="stylesheet">
+
+<body>
+  <div class="col-12">
+    <div class="card col-4">
+      <img src="cristianeflamengo.png" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Cristiane Matadora</h5>
+        <p class="card-text">
+          Cristiane foi uma das maiores jogadoras
+          de futebol feminino da história.
+        </p>
+        <a href="https://www.ogol.com.br/jogador/cristiane/106352" target="_blank" class="btn btn-primary"></a>
+        Saiba mais </a>
+      </div>
+    </div>
+  </div>
+  </head>
+  <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
