trabalho carrosel de imagens

--- a/apple.html/fotos.html
+++ b/apple.html/fotos.html
@@ -27,7 +27,7 @@
                             <table border="1" width="100%" height="600px" bgcolor="#cccddd">
                                 <tr align="center">
                                    <td colspan="5"><center><img src="apple02.png" width="80%"/>
-                                    <fon<table border="1" width="100%" height="600px" bgcolor="#cccddd">
+                                    <table border="1" width="100%" height="600px" bgcolor="#cccddd">
                                         <tr align="center">
                                            <td colspan="5"><center><img src="apple03.png" width="80%"/>
                                             <font color="#000000">
