--- a/exemplobootstrap01/slide/templete06.html
+++ b/exemplobootstrap01/slide/templete06.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template Bootstrap 06</title>
     <!--Incorporação do Bootstrap | CSS-->
-    <link href="css/bootstrap.min.css" rel="stylesheet"
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Carrossel de imagens - um slider-->
