--- a/testefinal.html/trabalho.html
+++ b/testefinal.html/trabalho.html
@@ -30,56 +30,51 @@
     </section>
 
     <!--BANNER-->
-<div id="carrossel-de-imagens" class="carousel slide" data-bs-ride="carousel">
-                <!--Traços marcadores-->
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carrossel-de-imagens" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carrossel-de-imagens" data-bs-slide-to="1" class="active"
-                        aria-current="true" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carrossel-de-imagens" data-bs-slide-to="2" class="active"
-                        aria-current="true" aria-label="Slide 3"></button>
-                </div>
-                <!-- Bloco de imagens -->
-                <div class="carousel-inner">
-                    <!--Imagem 1 + legenda -->
-                    <div class="carousel-item active">
-                        <img src="banner01.jfif" widht="1080px" height="600px" class="d-block w-100" alt="cidade">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Banner 01</h5>
-                            <p>Exemplo de Banner</p>
-                        </div>
-                    </div>
-                    <!--Imagem 2 + legenda-->
-                    <div class="carousel-item active">
-                        <img src="banner02.jfif" widht="1080px" height="600px" class="d-block w-100" alt="cidade">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Banner 02</h5>
-                            <p>Exemplo de Banner</p>
-                        </div>
-                    </div>
-                    <!--Imagem 3 + legenda-->
-                    <div class="carousel-item active">
-                        <img src="banner01 (2).jfif" widht="1080px" height="600px" class="d-block w-100" alt="cidade">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Banner 03</h5>
-                            <p>Exemplo de Banner</p>
-                        </div>
-                    </div>
-                </div>
-                <!--Botôes de navegação-->
-                <button class="carousel-control-prev" type="button" data-bs-target="#carrossel-de-imagens"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Anterior</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carrossel-de-imagens"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Próximo</span>
-                </button>
-        </table>
+    <div id="carrossel-de-imagens" class="carousel slide" data-bs-ride="carousel">
+        <!--Traços marcadores-->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carrossel-de-imagens" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carrossel-de-imagens" data-bs-slide-to="1" class="active"
+                aria-current="true" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carrossel-de-imagens" data-bs-slide-to="2" class="active"
+                aria-current="true" aria-label="Slide 3"></button>
         </div>
+        <!-- Bloco de imagens -->
+        <div class="carousel-inner">
+            <!--Imagem 1 + legenda -->
+            <div class="carousel-item active">
+                <img src="banner01.jfif" widht="1080px" height="600px" class="d-block w-100" alt="cidade">
+                <div class="carousel-caption d-none d-md-block">
+
+                </div>
+            </div>
+            <!--Imagem 2 + legenda-->
+            <div class="carousel-item active">
+                <img src="banner02.jfif" widht="1080px" height="600px" class="d-block w-100" alt="cidade">
+                <div class="carousel-caption d-none d-md-block">
+
+                </div>
+            </div>
+            <!--Imagem 3 + legenda-->
+            <div class="carousel-item active">
+                <img src="banner01 (2).jfif" widht="1080px" height="600px" class="d-block w-100" alt="cidade">
+                <div class="carousel-caption d-none d-md-block">
+
+                </div>
+            </div>
+        </div>
+        <!--Botôes de navegação-->
+        <button class="carousel-control-prev" type="button" data-bs-target="#carrossel-de-imagens" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carrossel-de-imagens" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Próximo</span>
+        </button>
+        </table>
+    </div>
     </section>
 
 
@@ -120,7 +115,7 @@
                     <img src="img8.jfif" alt="Montagens de computador"
                         style="width:30%; height:600px; object-fit: contain;">
                     <img src="img7.jfif" alt="Montagens de computador"
-                    style="width:30%; height:600px; object-fit: contain;">
+                        style="width:30%; height:600px; object-fit: contain;">
                     <img src="img9.jfif" alt="Manutenção de computador"
                         style="width:30%; height:600px; object-fit: contain;">
                 </div>
@@ -144,7 +139,7 @@
                     <img src="img10.jfif" alt="Montagens de computador"
                         style="width:30%; height:600px; object-fit: contain;">
                     <img src="img11.jfif" alt="Montagens de computador"
-                    style="width:30%; height:600px; object-fit: contain;">
+                        style="width:30%; height:600px; object-fit: contain;">
                     <img src="img12.jfif" alt="Manutenção de computador"
                         style="width:30%; height:600px; object-fit: contain;">
                 </div>
@@ -206,6 +201,130 @@
         </div>
     </section>
 
+    <section class="border border-black">
+        <div class="me-xl-8">
+            <div class="d-flex flex-column mb-3">
+                <div class="text-center">
+                    <h1>QUEM SOMOS</h1>
+                </div>
+                <p class="lead mb-4">
+                <div class="d-flex flex-column mb-3">
+                    <div class="text-center">
+                        <h1>Técnicos de Informática</h1>
+                    </div>
+                    </p>
+                    <p class="mb-6 me-xl-6">
+                        <font style="vertical-align: inherit;">
+                            <font style="vertical-align: inherit;">
+                                O Técnico em Informática é um profissional capacitado para atuar no suporte, manutenção,
+                                instalação e desenvolvimento de sistemas e equipamentos relacionados à área de
+                                tecnologia da informação (TI).
+                                Esse profissional trabalha com computadores, redes, sistemas operacionais, aplicativos e
+                                outros dispositivos tecnológicos,
+                                desempenhando um papel fundamental nas empresas e em outros contextos que utilizam
+                                recursos tecnológicos. A seguir, explico
+                                algumas áreas de atuação e as principais responsabilidades desse profissional:
+
+                                <h1>1. Áreas de Atuação</h1>
+                                O Técnico em Informática pode atuar em diversos setores, incluindo:
+
+                                Suporte Técnico: Presta suporte e assistência a usuários, solucionando problemas de
+                                software e hardware, instalando e configurando
+                                sistemas operacionais, aplicativos, redes e dispositivos.
+                                Manutenção de Computadores: Realiza a manutenção preventiva e corretiva de hardware
+                                (placas, processadores, memória, etc.) e realiza
+                                upgrades para melhorar o desempenho dos equipamentos.
+                                Redes de Computadores: Instala e configura redes locais (LAN) e redes de longa distância
+                                (WAN), além de gerenciar a segurança das
+                                informações e a conectividade entre os dispositivos.
+                                Desenvolvimento de Sistemas: Embora o foco do técnico seja mais voltado à parte
+                                operacional, alguns cursos incluem conhecimentos em
+                                programação e desenvolvimento de sistemas simples.
+                                Gestão de Banco de Dados: Administra bancos de dados, garantindo que os dados sejam
+                                armazenados, protegidos e acessados de maneira
+                                eficiente.
+                                Segurança da Informação: Monitora e implementa soluções de segurança para evitar ataques
+                                cibernéticos, como vírus, malware e invasões.
+                                <h1>2. Habilidades e Competências</h1>
+                                Para atuar como Técnico em Informática, o profissional deve possuir algumas habilidades
+                                essenciais:
+
+                                Conhecimento em Sistemas Operacionais: Domínio de sistemas como Windows, Linux e macOS,
+                                além de saber configurá-los e solucioná-los
+                                em caso de falhas.
+                                Redes de Computadores: Capacidade de configurar roteadores, switches, além de entender
+                                protocolos de comunicação (como TCP/IP).
+                                Noções de Programação: Conhecimento básico em linguagens como Python, Java ou C++ pode
+                                ser útil, mas não é a principal atribuição do
+                                técnico.
+                                Comunicação e Relacionamento com o Cliente: Habilidades de comunicação para entender
+                                problemas dos usuários e explicar soluções de
+                                maneira clara.
+                                Diagnóstico e Resolução de Problemas: Capacidade de identificar falhas rapidamente e
+                                encontrar soluções eficazes.
+                                Atualização Constante: A área de tecnologia está em constante evolução, e o profissional
+                                precisa estar sempre se atualizando para lidar
+                                com novas tecnologias e ameaças cibernéticas.
+                                <h1>3. Mercado de Trabalho</h1>
+                                O mercado para Técnicos em Informática é amplo e crescente, pois a tecnologia está cada
+                                vez mais presente em todos os aspectos da
+                                sociedade. Empresas de diversos setores contratam esse profissional para garantir a
+                                manutenção de seus sistemas e infraestrutura
+                                tecnológica. Além disso, as oportunidades não se limitam ao setor privado, já que órgãos
+                                públicos e escolas também necessitam de suporte
+                                técnico constante.
+
+                                <h1>4. Formação e Certificações</h1>
+                                A formação para se tornar Técnico em Informática geralmente se dá por meio de cursos
+                                técnicos de nível médio, com duração que varia
+                                entre 1 e 2 anos. Esses cursos podem ser oferecidos por escolas técnicas, instituições
+                                de ensino profissionalizantes e até mesmo em
+                                formato online.
+
+                                Além do curso técnico, o profissional pode buscar certificações específicas, como:
+
+                                CompTIA A+: Certificação básica para técnicos de TI, que valida habilidades em hardware,
+                                redes e segurança.
+                                Cisco Certified Network Associate (CCNA): Para quem deseja se especializar em redes de
+                                computadores.
+                                Microsoft Certified IT Professional (MCITP): Para quem se dedica à administração de
+                                sistemas Microsoft.
+                                <h1>5. Perspectivas de Carreira</h1>
+                                Com a evolução da tecnologia, o Técnico em Informática pode crescer na carreira,
+                                buscando especializações em áreas como segurança da
+                                informação, redes, programação ou até mesmo migrar para cargos de gestão de TI.
+                                Dependendo da experiência e da formação contínua, é
+                                possível avançar para funções de liderança, como coordenador de TI, analista de
+                                sistemas, entre outras.
+
+                                <h1>Conclusão</h1>
+                                O Técnico em Informática é um profissional crucial para o bom funcionamento das
+                                tecnologias dentro de empresas e instituições.
+                                Com a demanda crescente por profissionais qualificados em TI, esse campo oferece boas
+                                perspectivas de crescimento, além de um mercado de
+                                trabalho dinâmico e em constante evolução.
+
+
+
+
+                            </font>
+                        </font>
+                    </p>
+                    <div class="row g-lg-3">
+                        <div class="col-md-6">
+                            <ul class="list-unstyled mb-3">
+                                <li class="d-flex mb-3">
+                                <li class="d-flex">
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="list-unstyled mb-0">
+                                <li class="d-flex mb-3">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+    </section>
 
 
     <section>
@@ -229,9 +348,9 @@
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
     <table border="1" width="100%" bgcolor="#FFFFFF">
         <tr align="center">
-            <td colspan="5">rodapé</td>
+            <td colspan="5">Curso Técnico de Informática - Lavínia Gonçalves</td>
         </tr>
     </table>
 </body>
 
-</html>
+</html>   
